You can now team up with one of the computers. You and your computer's strengths will add togheter.

--- a/css/main.css
+++ b/css/main.css
@@ -21,8 +21,9 @@ label > input:checked + img{
   border:2px solid #f00;
 }
 
-.challengeInfo, .challengeInfo img, .carryOutChallengeInfo, 
-.noProgress, .gettingEquipment, .gettingEquipment img, .theGame{
+.challengeInfo, .challengeInfo img, .carryOutChallengeInfo,
+.noProgress, .gettingEquipment, .gettingEquipment img, .theGame,
+.carryChallengeWithCpu{
   display: none;
 }
 
