--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ label > input:checked + img{
 
 .challengeInfo, .challengeInfo img, .carryOutChallengeInfo,
 .noProgress, .gettingEquipment, .gettingEquipment img, .theGame,
-.carryChallengeWithCpu{
+.carryChallengeWithCpu, .theGame .team{
   display: none;
 }
 
