Fixed so that you will get successpoints, challengepoints is bad points. Partner/team dosent work. Adding strengths from items dosen't work. old challenge will hide if you press change challenge.

--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,8 @@ label > input:checked + img{
 
 .challengeInfo, .challengeInfo img, .carryOutChallengeInfo,
 .noProgress, .gettingEquipment, .gettingEquipment img, .theGame,
-.carryChallengeWithCpu, .theGame .team{
+.carryChallengeWithCpu, .theGame .team, .showSuccessPoints, .endChallenge,
+.resetAfterSuccess{
   display: none;
 }
 
